code/typescript/IDLookup/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# ID Lookup client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v1.0.0-blue)]()
[![npm](https://img.shields.io/badge/npm-v0.23.2-orange)](https://www.npmjs.com/package/@factset/sdk-idlookup/v/0.23.2)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

The Factset Identifier Lookup API provides the ability to search for various identifier types based on keyword. The API returns tickers, entity names and other identifiers that Factset supports. In addition, the API offers filters that allows users to refine the results.


This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1.0.0
- SDK version: 0.23.2
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-idlookup@0.23.2
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-idlookup@0.23.2
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, FactSetIDLookupApi } = require('@factset/sdk-idlookup');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new FactSetIDLookupApi();
const lookupRequest = new idlookup.LookupRequest(); // LookupRequest | Post body to lookup any FactSet identifiers

// Call api endpoint
apiInstance.searchCompanyname(lookupRequest).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-idlookup');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/idsearch*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*idlookup.FactSetIDLookupApi* | [**searchCompanyname**](docs/FactSetIDLookupApi.md#searchCompanyname) | **POST** /v1/idsearch | Search funtionality to return tickers, company names and unique identifiers for FactSet data


## Documentation for Models

 - [idlookup.ErrorResponse](docs/ErrorResponse.md)
 - [idlookup.FilterParams](docs/FilterParams.md)
 - [idlookup.IncludeExcludeObject](docs/IncludeExcludeObject.md)
 - [idlookup.LookupAssettype](docs/LookupAssettype.md)
 - [idlookup.LookupCount](docs/LookupCount.md)
 - [idlookup.LookupLimit](docs/LookupLimit.md)
 - [idlookup.LookupObject](docs/LookupObject.md)
 - [idlookup.LookupRequest](docs/LookupRequest.md)
 - [idlookup.LookupResponse](docs/LookupResponse.md)
 - [idlookup.ResponseDetails](docs/ResponseDetails.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
